--- a/Healthtechbd/Prescriptions.xaml
+++ b/Healthtechbd/Prescriptions.xaml
@@ -38,7 +38,7 @@
                         <Button x:Name="btnSearch" Style="{StaticResource SearchButton}" Grid.Column="1" Margin="0 0 10 0" Click="btnSearch_Click">
                             <materialDesign:PackIcon Kind="DatabaseSearch"/>
                         </Button>
-                        <Button Grid.Column="2" Style="{StaticResource SearchButton}">Reset</Button>
+                        <Button x:Name="btnReset" Grid.Column="2" Style="{StaticResource SearchButton}" Click="btnReset_Click">Reset</Button>
                     </Grid>
                 </Grid>
 
