--- a/Healthtechbd/ChangeProfilePic.xaml
+++ b/Healthtechbd/ChangeProfilePic.xaml
@@ -34,13 +34,12 @@
                     <Border Padding="20">
                         <Grid>
                             <StackPanel Grid.Row="4" Grid.Column="1"  Margin="5 0">
-                                <TextBlock Style="{StaticResource Level}" Text="Name"/>
-                                <TextBlock x:Name="ButtonOpen" Text="open" MouseDown="ButtonOpen_MouseDown"></TextBlock>
-
-                                <Image Margin="12,12,16,71" Height="300" Width="300" Name="ProfilePic" Stretch="Fill"  />
+                                <Button x:Name="ButtonBrowse" Content="Browse" Foreground="Black" Background="Transparent" Width="150" Height="40" HorizontalAlignment="Left" Click="ButtonBrowse_Click"/>
+                                <Image Height="200" Width="200" Name="ReviewProfilePic" Stretch="Fill"  />
 
                                 <TextBlock x:Name="CorrectImageName" Visibility="Hidden" Text=""/>
                                 <TextBlock x:Name="FilePath" Visibility="Hidden" Text=""/>
+                                <TextBlock x:Name="ExitsProfilePic" Visibility="Hidden" Text=""/>
                             </StackPanel>
                         </Grid>
                     </Border>
