--- a/Healthtechbd/Prescriptions.xaml
+++ b/Healthtechbd/Prescriptions.xaml
@@ -57,6 +57,16 @@
                                     <DataGridTemplateColumn Header="Action">
                                         <DataGridTemplateColumn.CellTemplate>
                                             <DataTemplate>
+                                                <Button x:Name="btnViewPrescriptionRow" Background="#3CC2BB" Height="20" Width="30" Padding="0" Click="btnViewPrescriptionRow_Click"  >
+                                                    <materialDesign:PackIcon Kind="Eye"/>
+                                                </Button>
+                                            </DataTemplate>
+                                        </DataGridTemplateColumn.CellTemplate>
+                                    </DataGridTemplateColumn>
+
+                                    <DataGridTemplateColumn>
+                                        <DataGridTemplateColumn.CellTemplate>
+                                            <DataTemplate>
                                                 <Button x:Name="btnEditPrescriptionRow" Background="#3CC2BB" Height="20" Width="30" Padding="0"  >
                                                     <materialDesign:PackIcon Kind="TableEdit"/>
                                                 </Button>
