--- a/Healthtechbd/Prescriptions.xaml
+++ b/Healthtechbd/Prescriptions.xaml
@@ -67,7 +67,7 @@
                                     <DataGridTemplateColumn>
                                         <DataGridTemplateColumn.CellTemplate>
                                             <DataTemplate>
-                                                <Button x:Name="btnEditPrescriptionRow" Background="#3CC2BB" Height="20" Width="30" Padding="0"  >
+                                                <Button x:Name="btnEditPrescriptionRow" Background="#3CC2BB" Height="20" Width="30" Padding="0" Click="btnEditPrescriptionRow_Click"  >
                                                     <materialDesign:PackIcon Kind="TableEdit"/>
                                                 </Button>
                                             </DataTemplate>
