--- a/Healthtechbd/ViewPrescription.xaml
+++ b/Healthtechbd/ViewPrescription.xaml
@@ -20,7 +20,7 @@
             <Grid Height="60" Background="#fff" VerticalAlignment="top">
                 <Border Margin="20 0 0 0">
                     <StackPanel Orientation="Horizontal">
-                        <TextBlock Style="{StaticResource BreadcrumbItem}" Text="Prescription"/>
+                        <TextBlock Style="{StaticResource BreadcrumbItem}" Text="Prescription" MouseDown="TextBlock_MouseDown"/>
                         <TextBlock Style="{StaticResource BreadcrumbItem}" Text="/" />
                         <TextBlock Style="{StaticResource BreadcrumbItem}" Text="View Prescription"/>
                     </StackPanel>
@@ -36,6 +36,7 @@
                     <Grid Background="#fff">
 
                         <Grid.RowDefinitions>
+                            <RowDefinition></RowDefinition>
                             <RowDefinition></RowDefinition>
                             <RowDefinition></RowDefinition>
                             <RowDefinition></RowDefinition>
@@ -165,10 +166,24 @@
                             </Grid>
                         </Border>
 
-                        <Separator Grid.Row="6" Margin="12 150 12 0" Background="#eee"/>
+                        <!--Others Note-->
+                        <Border Padding="12" Grid.Row="6">
+                            <Grid>
+                                <StackPanel Margin="5 0">
+                                    <TextBlock Style="{StaticResource Level}" Foreground="Black" FontSize="20" Text="Others Note"/>
+
+                                    <StackPanel Orientation="Horizontal">
+                                        <TextBlock FontWeight="Normal" Style="{StaticResource Level}" Text="Instructions goes here1, instructions goes here1"/>
+                                    </StackPanel>
+                                </StackPanel>
+                            </Grid>
+                        </Border>
+
+
+                        <Separator Grid.Row="7" Margin="12 150 12 0" Background="#eee"/>
 
                         <!--Singnature & Date-->
-                        <Border Padding="12" Grid.Row="7">
+                        <Border Padding="12" Grid.Row="8">
                             <Grid>
 
                                 <Grid.ColumnDefinitions>
